// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ExpenseList should render ExpenseList with Expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={350}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={-345600000}
      description="Hot Dog"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={700}
      createdAt={345600000}
      description="Not Hot Dog"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`components/ExpenseList should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;
